Popravio prikaz svih slika

--- a/imageupload/images/templates/images.html
+++ b/imageupload/images/templates/images.html
@@ -5,10 +5,15 @@
 {% endblock %}
 
 {%  block content %}
-    <div class="list-group">
+    <div class="card-deck">
         {% for image in images %}
-            <a class="list-group-item list-group-item-action" href="{% url 'images:image' image.id %}">
-                {{ image.title }}
+            <a class="card mb-4" href="{% url 'images:image' image.id %}">
+            <img class="card-img-top img-fluid" src="{{image.path.url}}">
+                <div class="card-body">
+                    <h4 class="card-title">{{ image.title }}</h4>
+                    <p class="card-text">{{ image.description }}</p>
+                    <p class="card-text"><small class="text-muted">Last updated {{ image.updated_at }}</small></p>
+                </div>
             </a>
         {% endfor %}
     </div>
